tests/pass/MultilineComment.java
package pass;

public class MultilineComment {
  public void comment() {
    /* This is a comment */
  }
}
