tests/fail/Double.java
package fail;

import java.lang.System;

public class Double {

  public static void main(String[] args ) {
    double aNumber = "THis is not a double";
  }

}
